Add new Rest controller