@@ -12,7 +12,6 @@ import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public final class AccountServiceShould {
@@ -22,13 +21,12 @@ public final class AccountServiceShould {
     @Test
     public void testGetAllAccounts() {
         // arrange
-        List<Account> accounts = new ArrayList<Account>() {{
-            add(new Account(null, null, null));
-            add(new Account(null, null, null));
-            add(new Account(null, null, null));
-            add(new Account(null, null, null));
-        }};
-
+        List<Account> accounts = List.of(
+                new Account(null, null, null),
+                new Account(null, null, null),
+                new Account(null, null, null),
+                new Account(null, null, null)
+        );
         inMemoryRepository = new InMemoryRepositoryImpl(accounts);
         AccountSearcher accountSearcher = new AccountSearcher(inMemoryRepository);
 
@@ -43,13 +41,15 @@ public final class AccountServiceShould {
     public void testGetAllMovements() {
         // arrange
         String uuid = "249c9b83-4912-4719-9d5d-a27a3b4c4a8c";
-        List<Account> accounts = new ArrayList<Account>() {{
-            add(new Account(uuid,
-                    new Owner("Maria", "Garcia", "22392403V"),
-                    new ArrayList<>(Arrays.asList(new Movement(1000.00, MovementType.INCOME),
-                            new Movement(500.00, MovementType.EXPENSE)))));
-
-        }};
+        List<Account> accounts = List.of(
+                new Account(uuid,
+                        new Owner("Maria", "Garcia", "22392403V"),
+                        new ArrayList<>(List.of(
+                                new Movement(1000.00, MovementType.INCOME),
+                                new Movement(500.00, MovementType.EXPENSE))
+                        )
+                )
+        );
 
         inMemoryRepository = new InMemoryRepositoryImpl(accounts);
         AccountSearcher accountSearcher = new AccountSearcher(inMemoryRepository);
@@ -66,17 +66,22 @@ public final class AccountServiceShould {
         // arrange
         String origin = "ff6f9c90-bbb7-409c-87d2-04277f85d111";
         String destination = "249c9b83-4912-4719-9d5d-a27a3b4c4a8c";
-        List<Account> accounts = new ArrayList<Account>() {{
-            add(new Account(origin,
-                    new Owner("William", "Mote", "43957942C"),
-                    new ArrayList<>(Arrays.asList(new Movement(1000.00, MovementType.INCOME),
-                            new Movement(200.00, MovementType.INCOME)))));
-            add(new Account(destination,
-                    new Owner("Maria", "Garcia", "22392403V"),
-                    new ArrayList<>(Arrays.asList(new Movement(1000.00, MovementType.INCOME),
-                            new Movement(500.00, MovementType.EXPENSE)))));
-
-        }};
+        List<Account> accounts = List.of(
+                new Account(origin,
+                        new Owner("William", "Mote", "43957942C"),
+                        new ArrayList<>(List.of(
+                                new Movement(1000.00, MovementType.INCOME),
+                                new Movement(200.00, MovementType.INCOME))
+                        )
+                ),
+                new Account(destination,
+                        new Owner("Maria", "Garcia", "22392403V"),
+                        new ArrayList<>(List.of(
+                                new Movement(1000.00, MovementType.INCOME),
+                                new Movement(500.00, MovementType.EXPENSE))
+                        )
+                )
+        );
 
         inMemoryRepository = new InMemoryRepositoryImpl(accounts);
         TransferenceService transferenceService = new TransferenceService(inMemoryRepository);
@@ -93,13 +98,15 @@ public final class AccountServiceShould {
     public void testDeposit() {
         // arrange
         String uuid = "249c9b83-4912-4719-9d5d-a27a3b4c4a8c";
-        List<Account> accounts = new ArrayList<Account>() {{
-            add(new Account(uuid,
-                    new Owner("Maria", "Garcia", "22392403V"),
-                    new ArrayList<>(Arrays.asList(new Movement(1000.00, MovementType.INCOME),
-                            new Movement(500.00, MovementType.EXPENSE)))));
-
-        }};
+        List<Account> accounts = List.of(
+                new Account(uuid,
+                        new Owner("Maria", "Garcia", "22392403V"),
+                        new ArrayList<>(List.of(
+                                new Movement(1000.00, MovementType.INCOME),
+                                new Movement(500.00, MovementType.EXPENSE))
+                        )
+                )
+        );
 
         inMemoryRepository = new InMemoryRepositoryImpl(accounts);
         TransferenceService transferenceService = new TransferenceService(inMemoryRepository);
@@ -115,13 +122,15 @@ public final class AccountServiceShould {
     public void testWithdraw() {
         // arrange
         String uuid = "249c9b83-4912-4719-9d5d-a27a3b4c4a8c";
-        List<Account> accounts = new ArrayList<Account>() {{
-            add(new Account(uuid,
-                    new Owner("Maria", "Garcia", "22392403V"),
-                    new ArrayList<>(Arrays.asList(new Movement(1000.00, MovementType.INCOME),
-                            new Movement(500.00, MovementType.EXPENSE)))));
-
-        }};
+        List<Account> accounts = List.of(
+                new Account(uuid,
+                        new Owner("Maria", "Garcia", "22392403V"),
+                        new ArrayList<>(List.of(
+                                new Movement(1000.00, MovementType.INCOME),
+                                new Movement(500.00, MovementType.EXPENSE))
+                        )
+                )
+        );
 
         inMemoryRepository = new InMemoryRepositoryImpl(accounts);
         TransferenceService transferenceService = new TransferenceService(inMemoryRepository);
